refactor(curriculum): update answers for questions in `quiz-html-tables-and-forms`

--- a/curriculum/challenges/english/25-front-end-development/quiz-html-tables-and-forms/66ed902df45ce3ece4053ebc.md
+++ b/curriculum/challenges/english/25-front-end-development/quiz-html-tables-and-forms/66ed902df45ce3ece4053ebc.md
@@ -235,15 +235,15 @@ Which of the following is a tool that allows you to inspect and modify the HTML 
 
 #### --distractors--
 
-pyCharm
+DOM removal.
 
 ---
 
-Jest
+DOM tester.
 
 ---
 
-ChatGPT
+DOM validation.
 
 #### --answer--
 
